--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,8 @@
-theme: jekyll-theme-minimal
+name: Matt Garnett
+markdown: kramdown
+
+defaults:
+  - scope:
+      path: "assets/img"
+    values:
+      image: true
